# Self-Reflective-RAG

./: LICENSE  main.py  pyproject.toml  requirements.txt  streamlit_app.py
config/: llm.py
data_ingestion/: document_processor.py  ingest_bible.py
graph_builder/: graph_builder.py
nodes/: nodes.py
state/: rag_state.py
tool/: search_tool.py
vectorstores/: vectorstores.py
