[project]
name = "self-reflective-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "chromadb>=1.5.1",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "groq>=0.37.1",
    "ipywidgets>=8.1.8",
    "jq>=1.11.0",
    "jupyterlab>=4.5.4",
    "langchain>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-community<0.4",
    "langchain-groq>=1.0.0",
    "langgraph>=0.1.0",
    "llvmlite==0.45.1",
    "matplotlib>=3.10.8",
    "numba==0.62.0",
    "numpy<2",
    "onnxruntime==1.17.3",
    "openpyxl>=3.1.5",
    "pandas<3.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.27.1",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.0.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.19.0",
    "tiktoken>=0.12.0",
    "torch==2.2.2",
    "unstructured[docx]>=0.10.0",
    "wikipedia>=1.4.0",
    "docx>=0.2.4",
    "langchain-experimental>=0.0.42",
    "langchain-text-splitters>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langchain-tavily>=0.2.17",
    "tavily-python>=0.7.21",
    "altair==4.2.2",
]
